--- a/admin/config.yml
+++ b/admin/config.yml
@@ -12,7 +12,7 @@ collections:
     label: "Новини"
     folder: "public/news"
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    slug: "{{slug}}"
     fields:
       - { label: "Заголовок", name: "title", widget: "string" }
       - { label: "Дата", name: "date", widget: "datetime" }
