--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,8 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: Kernesgenaa/222
   branch: main
+  base_url: https://sveltia-cms-auth.kernesgenaa.workers.dev/
 
 media_folder: "images/uploads"
 public_folder: "/images/uploads"
