--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "222",
   "version": "1.0.0",
   "description": "Дентіс",
-  "main": "doctor.js",
+  "main": "index.ntml",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
