--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,15 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#005761",
   "icons": [
     {
       "src": "/icons/icon-192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-180.png",
+      "sizes": "180x180",
       "type": "image/png"
     },
     {
