--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
+  "theme_color": "#676C78",
   "icons": [
     {
       "src": "/icons/icon-192.png",
